leR ajout controlleur authentification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
-spring.application.name=user_management
-# Configuration H2 (modifiable pour MySQL ou PostgreSQL)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+# Configuration de la base de donnees MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/gestion_utilisateur
+spring.datasource.username=root
 spring.datasource.password=
-
-# Console H2 pour voir la base de données
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
+#Ajout du nouveau port
+server.port=8181
